--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <!-- Bootsrap's link-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- File css's link -->
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header class="fixed-top">
+
+    </header>
+
+    <main>
+        <section class="d-flex pt-5">
+            <div class="w-25 div-1 d-flex flex-column justify-content-between">
+                <div>LAOM</div>
+                <div>LAOM</div>
+            </div>
+            <div class="div-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam distinctio ipsa rem est, impedit repudiandae voluptatum architecto minus labore tempore, sunt aspernatur eligendi. Architecto ut veritatis odit harum nisi quo.
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
+    <!-- Bootstarp javascript's link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
