feat(header): working on the navbar and his elements

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 </head>
 <body>
     <header class="fixed-top">
-
+        <!-- Navbar -->
+        
     </header>
 
     <main>
-        <section class="d-flex pt-5">
-            <div class="w-25 div-1 d-flex flex-column justify-content-between">
+        <section class="d-flex">
+            <div class="mt-5 fixed-top fixed-bottom w-25 div-1 d-flex flex-column justify-content-between">
                 <div>LAOM</div>
                 <div>LAOM</div>
             </div>
-            <div class="div-2">
+            <div class="div-2 mt-5 ms-auto">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam distinctio ipsa rem est, impedit repudiandae voluptatum architecto minus labore tempore, sunt aspernatur eligendi. Architecto ut veritatis odit harum nisi quo.
             </div>
         </section>
