feat(header): created the structure for the header

--- a/index.html
+++ b/index.html
@@ -12,16 +12,39 @@
 <body>
     <header class="fixed-top">
         <!-- Navbar -->
-        
+        <nav class="d-flex justify-content-between">
+            <div>
+                <figure class="">
+                    <img class="img-fluid d-lg-none" src="./assets/img/mobile-logo.png" alt="Logo small">
+                    <img class="img-fluid w-auto d-none d-lg-block" src="./assets/img/logo.svg" alt="Logo large">
+                </figure>
+            </div>
+            <div>laom</div>
+            <div class="d-flex column-gap-2">
+                <div class="d-none d-lg-block">D</div>
+                <div class="d-none d-lg-block">D</div>
+                <div class="d-none d-lg-block">D</div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      D
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </div>
+            </div>
+        </nav>
     </header>
 
     <main>
         <section class="d-flex">
-            <div class="mt-5 fixed-top fixed-bottom w-25 div-1 d-flex flex-column justify-content-between">
+            <div class="fixed-top fixed-bottom w-25 div-1 d-flex flex-column justify-content-between">
                 <div>LAOM</div>
                 <div>LAOM</div>
             </div>
-            <div class="div-2 mt-5 ms-auto">
+            <div class="div-2 ms-auto">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam distinctio ipsa rem est, impedit repudiandae voluptatum architecto minus labore tempore, sunt aspernatur eligendi. Architecto ut veritatis odit harum nisi quo.
             </div>
         </section>
