feat(main): created the structure of the side-bar

--- a/index.html
+++ b/index.html
@@ -40,9 +40,47 @@
 
     <main>
         <section class="d-flex">
-            <div class="fixed-top fixed-bottom w-25 div-1 d-flex flex-column justify-content-between">
-                <div>LAOM</div>
-                <div>LAOM</div>
+            <!-- DIV'S SIDE-BAR -->
+            <div class="fixed-top fixed-bottom w-25 div-1 d-flex flex-column justify-content-between align-items-center">
+                <div class="pt-5">
+                    <div>
+                        <div>
+
+                        </div>
+                        <span class="d-none d-lg-block">
+                            <a class="text-capitalize text-decoration-none" href="#">home</a>
+                        </span>
+                    </div>
+
+                    <div>
+                        <div>
+
+                        </div>
+                        <span class="d-none d-lg-block">
+                            <a class="text-capitalize text-decoration-none" href="#">stats</a>
+                        </span>
+                    </div>
+
+                    <div>
+                        <div>
+
+                        </div>
+                        <span class="d-none d-lg-block">
+                            <a class="text-capitalize text-decoration-none" href="#">signals</a>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="pb-5">
+                    <div>
+                        <div>
+
+                        </div>
+                        <span class="d-none d-lg-block">
+                            <a class="text-capitalize text-decoration-none" href="#">admin</a>
+                        </span>
+                    </div>
+                </div>
             </div>
             <div class="div-2 ms-auto">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam distinctio ipsa rem est, impedit repudiandae voluptatum architecto minus labore tempore, sunt aspernatur eligendi. Architecto ut veritatis odit harum nisi quo.
