feat(main): working on the div about the students

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="fixed-top">
         <!-- Navbar -->
-        <nav class="d-flex justify-content-between">
+        <nav class="d-flex justify-content-between align-items-center p-3">
             <div>
                 <figure class="">
                     <img class="img-fluid d-lg-none" src="./assets/img/mobile-logo.png" alt="Logo small">
@@ -20,7 +20,7 @@
                 </figure>
             </div>
             <div>laom</div>
-            <div class="d-flex column-gap-2">
+            <div class="d-flex align-items-center column-gap-2">
                 <div class="d-none d-lg-block">D</div>
                 <div class="d-none d-lg-block">D</div>
                 <div class="d-none d-lg-block">D</div>
@@ -41,9 +41,9 @@
     <main>
         <section class="d-flex">
             <!-- DIV'S SIDE-BAR -->
-            <div class="fixed-top fixed-bottom w-25 div-1 d-flex flex-column justify-content-between align-items-center">
-                <div class="pt-5">
-                    <div>
+            <div class="side-bar fixed-top fixed-bottom w-25 d-flex flex-column justify-content-between align-items-center">
+                <div class="pt-4">
+                    <div class="py-2">
                         <div>
 
                         </div>
@@ -52,7 +52,7 @@
                         </span>
                     </div>
 
-                    <div>
+                    <div class="py-2">
                         <div>
 
                         </div>
@@ -61,7 +61,7 @@
                         </span>
                     </div>
 
-                    <div>
+                    <div class="py-2">
                         <div>
 
                         </div>
@@ -82,8 +82,27 @@
                     </div>
                 </div>
             </div>
-            <div class="div-2 ms-auto">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam distinctio ipsa rem est, impedit repudiandae voluptatum architecto minus labore tempore, sunt aspernatur eligendi. Architecto ut veritatis odit harum nisi quo.
+
+            <!-- DIV'S MAIN CONTENT -->
+            <div class="main_content ms-auto">
+                <!-- DIV ABOUT THE STUDENTS -->
+                <div class=".bg-primary">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+
+                            </div>
+
+                            <div class="col-12">
+
+                            </div>
+
+                            <div class="col-12">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
