feat(main): working on then structure of the grid

--- a/index.html
+++ b/index.html
@@ -86,22 +86,40 @@
             <!-- DIV'S MAIN CONTENT -->
             <div class="main_content ms-auto">
                 <!-- DIV ABOUT THE STUDENTS -->
-                <div class=".bg-primary">
+                <div class="bg-primary">
                     <div class="container">
                         <div class="row">
-                            <div class="col-12">
-
+                            <div class="py-3 col-12 col-md-4 order-md-3">
+                                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
+                                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                          ...
+                                    </div>
+                                </div>
                             </div>
 
-                            <div class="col-12">
-
+                            <div class="py-3 col-12 col-md-4 order-md-1">
+                                <div class="d-flex">
+                                    <h4>boolean</h4>
+                                    <button>Piano blaze</button>
+                                </div>
                             </div>
 
-                            <div class="col-12">
-
+                            <div class="py-3 col-12 col-md-4 order-md-2">
+                                <p>Studenti online negli ultimi 30 minuti</p>
+                                <span>125</span>
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <!-- DIV ABOUT THE FUTURE CLASSES AND RELATIVES INSTRUCTIONS -->
+                <div class="container">
+
                 </div>
             </div>
         </section>
